# cpp-demos

./: .gitignore  CMakeLists.txt  README.md
pointer-to-vector-danger/: main.cpp
virtual-destructor-synchronization-bug/: main.cpp
